# supermodels

./: pyproject.toml
docs/: CHANGELOG.md  README.md
src/supermodels/: __init__.py
src/supermodels/adapters/: __init__.py
src/supermodels/adapters/sqla/: __init__.py  adapter.py  enums.py  hints.py  typer.py
src/supermodels/converters/: __init__.py  base.py  dc.py  pyd.py
src/supermodels/core/: hints.py  manager.py
src/supermodels/core/bases/: __init__.py  adapter.py  manager.py
src/supermodels/core/metas/: __init__.py  manager.py
src/supermodels/core/models/: __init__.py  contexts.py  tvars.py
src/supermodels/core/protos/: __init__.py  database.py
src/supermodels/core/utils/: __init__.py  decorators.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  adapters.py  managers.py  models.py
tests/unit/core/: __init__.py  test_manager.py  test_registerops.py
tests/unit/core/bases/: __init__.py  test_adapter.py  test_manager.py
tests/unit/core/metas/: __init__.py  test_manager.py
