[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "supermodels"
dynamic = ["version"]
description = "Type-safe, framework-agnostic database managers with context management and dynamic method dispatch"
readme = "docs/README.md"
license = {text = "MIT"}
authors = [
    {name = "Joel Yisrael", email = "schizoprada@gmail.com"}
]
classifiers = []
keywords = []
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy"
]

[tool.setuptools]
packages = ["supermodels"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.exclude-package-data]
"supermodels" = [
    "__pycache__",
    "*.pyc",
    ".DS_Store"
]

[tool.hatch.version]
path = "src/supermodels/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/supermodels"]
